--- a/looplab/index.html
+++ b/looplab/index.html
@@ -20,9 +20,12 @@
     <title>Bootstrap Theme</title>
   </head>
 
-  <body>
+  <body data-spy="scroll" data-target="#main-nav" id="home">
     <!-- START HERE -->
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <nav
+      id="main-nav"
+      class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top"
+    >
       <div class="container">
         <a href="index.html" class="navbar-brand">LoopLAB</a>
         <button
@@ -139,6 +142,233 @@
       </div>
     </header>
 
+    <!-- EXPLORE HEAD -->
+    <section id="explore-head-section">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-5">
+            <h1 class="display-4">Explore</h1>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+              laborum fuga maiores sit rerum est totam, deleniti cupiditate.
+              Rerum, explicabo!
+            </p>
+            <a href="#" class="btn btn-outline-secondary">Find Out More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- EXPLORE SECTION -->
+    <section id="explore-section" class="bg-light text-muted py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="img/explore-section1.jpg"
+              alt=""
+              class="img-fluid mb-3 rounded-circle"
+            />
+          </div>
+          <div class="col-md-6">
+            <h3>Explore & Connect</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aut
+              tempora quaerat consequuntur iure molestias perferendis cumque
+              neque officia eum.
+            </p>
+            <div class="d-flex justify-content-between">
+              <div class="p-4">
+                <i class="fas fas--bg-dark fa-check fa-2x"></i>
+              </div>
+              <div class="p-4">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
+                aliquam, odit ut totam laboriosam accusantium?
+              </div>
+            </div>
+            <div class="d-flex justify-content-between">
+              <div class="p-4">
+                <i class="fas fas--bg-dark fa-check fa-2x"></i>
+              </div>
+              <div class="p-4">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
+                aliquam, odit ut totam laboriosam accusantium?
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CREATE HEAD -->
+    <section id="create-head-section" class="bg-primary">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-5">
+            <h1 class="display-4">Create</h1>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+              laborum fuga maiores sit rerum est totam, deleniti cupiditate.
+              Rerum, explicabo!
+            </p>
+            <a href="#" class="btn btn-outline-light">Find Out More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CREATE SECTION -->
+    <section id="create-section" class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 order-2">
+            <img
+              src="img/create-section1.jpg"
+              alt=""
+              class="img-fluid mb-3 rounded-circle"
+            />
+          </div>
+          <div class="col-md-6 order-1">
+            <h3>Create Your Passion</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aut
+              tempora quaerat consequuntur iure molestias perferendis cumque
+              neque officia eum.
+            </p>
+            <div class="d-flex justify-content-between">
+              <div class="p-4">
+                <i class="fas fas--white fa-check fa-2x"></i>
+              </div>
+              <div class="p-4">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
+                aliquam, odit ut totam laboriosam accusantium?
+              </div>
+            </div>
+            <div class="d-flex justify-content-between">
+              <div class="p-4">
+                <i class="fas fas--white fa-check fa-2x"></i>
+              </div>
+              <div class="p-4">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
+                aliquam, odit ut totam laboriosam accusantium?
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SHARE HEAD -->
+    <section id="share-head-section" class="bg-primary">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-5">
+            <h1 class="display-4">Share</h1>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+              laborum fuga maiores sit rerum est totam, deleniti cupiditate.
+              Rerum, explicabo!
+            </p>
+            <a href="#" class="btn btn-outline-light">Find Out More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SHARE SECTION -->
+    <section id="share-section" class="bg-light text-muted py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="img/share-section1.jpg"
+              alt=""
+              class="img-fluid mb-3 rounded-circle"
+            />
+          </div>
+          <div class="col-md-6">
+            <h3>Share What You Create</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit aut
+              tempora quaerat consequuntur iure molestias perferendis cumque
+              neque officia eum.
+            </p>
+            <div class="d-flex justify-content-between">
+              <div class="p-4">
+                <i class="fas fas--bg-dark fa-check fa-2x"></i>
+              </div>
+              <div class="p-4">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
+                aliquam, odit ut totam laboriosam accusantium?
+              </div>
+            </div>
+            <div class="d-flex justify-content-between">
+              <div class="p-4">
+                <i class="fas fas--bg-dark fa-check fa-2x"></i>
+              </div>
+              <div class="p-4">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
+                aliquam, odit ut totam laboriosam accusantium?
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER -->
+
+    <footer id="main-footer" class="bg-dark">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-4">
+            <h3>LoopLAB</h3>
+            <p>Copyright &copy; <span id="year"></span></p>
+            <button
+              class="btn btn-primary"
+              data-toggle="modal"
+              data-target="#contactModal"
+            >
+              Contact Us
+            </button>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- CONTACT MODAL  -->
+    <div class="modal fade text-dark" id="contactModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Contact Us</h5>
+            <button class="close" data-dismiss="modal">
+              <span>&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" />
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" />
+              </div>
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control"></textarea>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-primary btn-block">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="http://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -158,6 +388,27 @@
     <script>
       // Get the current year for the copyright
       $('#year').text(new Date().getFullYear());
+
+      // Init scrollspy
+      $('body').scrollspy({ target: '#main-nav' });
+
+      $('#main-nav a').on('click', function() {
+        if (this.hash !== '') {
+          event.preventDefault();
+
+          const hash = this.hash;
+
+          $('html, body').animate(
+            {
+              scrollTop: $(hash).offset().top
+            },
+            800,
+            function() {
+              window.location.hash = hash;
+            }
+          );
+        }
+      });
     </script>
   </body>
 </html>
